--- a/Variable_Neighborhood_Search.ipynb
+++ b/Variable_Neighborhood_Search.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Setup inicial"
+    "# TRABALHO 2 - Metaheuristics (VNS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Alunos:\n",
+    "- **Claudia Oliveira**\n",
+    "- **Matheus Oliveira**"
    ]
   },
   {
@@ -51,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NORMALIZAÇÂO"
+    "# NORMALIZAÇÃO"
    ]
   },
   {
